# gallery-extension-test-server

./: Cargo.toml  build.rs
src/: main.rs  server_config.rs
src/endpoints/: change_path.rs  download.rs  get_server_config.rs  index.rs  mod.rs  thumbnail.rs
templates/: list.html.j2
ui/: index.html  package.json  pnpm-lock.yaml  vite.config.js
ui/src/: App.vue  api.ts  main.ts  vite-env.d.ts
ui/src/components/: Breadcrumbs.vue  ItemIcon.vue  ItemTitle.vue  Spinner.vue
