[package]
name = "gallery-http-server"
version = "0.1.0"
edition = "2024"

[dependencies]
alphanumeric-sort = "1.5.3"
mime_guess = "2.0.5"
pathdiff = "0.2.3"
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.218", features = ["derive"] }

[dependencies.rocket_dyn_templates]
version = "0.2.0"
features = ["minijinja"]
