[package]
name = "gallery-http-server"
version = "0.1.0"
edition = "2024"

[dependencies]
mime_guess = "2.0.5"
pathdiff = "0.2.3"
serde = { version = "1.0.218", features = ["derive"] }
thumbnailer = "0.5.1"
cached = "0.55.1"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
rust-embed = "8.6.0"
actix-files = "0.6.6"
actix-web = "4.9.0"
env_logger = "0.11.6"
actix-cors = "0.7.0"

[build-dependencies]
cargo-emit = "0.2.1"
